@@ -139,6 +139,15 @@ sub localtime2()
 	}
 }
 
+sub is_leap_year($)
+{
+	my $year = shift;
+        return 0 if $year % 4;
+        return 1 if $year % 100;
+	return 0 if $year % 400;
+	return 1;
+}
+
 use constant CONTINUOUS	=> 6;
 use constant YEAR	=> 5;
 use constant QUARTER	=> 4;
@@ -156,6 +165,11 @@ my $dom = sprintf("%d",strftime("%d",localtime2()));
 my $year = strftime("%Y",localtime2());
 my $weekday = strftime("%u",localtime2());
 my $yearday = strftime("%j",localtime2());
+print "$yearday\n";
+# leap year fix
+if(is_leap_year($year) && $yearday > 31+28) {
+	$yearday -= 1;
+}
 
 my $today;
 if($fakedate) {
